[package]
name = "YanPan1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "serde_json", "blocking"] }
tokio = { version = "1.20.0", features = ["full"] }
warp = "0.3.2"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
num-traits = "0.2"
num-derive = "0.2"
chrono = "*"
urlencoding = "*"
fcm = "0.9.2"